--- a/flappy.html
+++ b/flappy.html
@@ -11,7 +11,7 @@
 <body class="conteudo">
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
-        
+    <footer>Made by Eric Diego - 2020</footer>
     <script src="js/flappy.js"></script>
 </body>
 
